--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,14 +12,12 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Logging format
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log /var/log/nginx/access.log main;
 
-    # Performance settings
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
@@ -27,7 +25,6 @@ http {
     types_hash_max_size 2048;
     client_max_body_size 50M;
 
-    # Gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
@@ -54,18 +51,16 @@ http {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-    # Upstream for the application
     upstream crypto_app {
         server crypto-app:5000;
         keepalive 32;
     }
 
-    # Main server block
+    # HTTP: redirect all to HTTPS, keep ACME challenge
     server {
         listen 80;
-        server_name _; # Replace with your domain
+        server_name api.your-domain.com;  # TODO: ganti dengan domain Anda
 
-        # ACME challenge (Let's Encrypt)
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
             allow all;
@@ -73,10 +68,35 @@ http {
             access_log off;
         }
 
-        # Security
-        server_tokens off;
+        location / {
+            return 301 https://$host$request_uri;
+        }
 
-        # Health check endpoint (bypass rate limiting)
+        server_tokens off;
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name api.your-domain.com;  # TODO: ganti dengan domain Anda
+
+        ssl_certificate     /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        # ACME challenge (opsional jika gunakan webroot untuk renew)
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+            allow all;
+            default_type "text/plain";
+            access_log off;
+        }
+
+        # Health (no rate limit)
         location /health {
             proxy_pass http://crypto_app;
             proxy_set_header Host $http_host;
@@ -86,43 +106,40 @@ http {
             access_log off;
         }
 
-        # API endpoints with rate limiting
+        # API with rate limiting
         location /api/ {
             limit_req zone=api burst=20 nodelay;
-            
+
             proxy_pass http://crypto_app;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Timeouts
+
             proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
-            
-            # Buffer settings
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+
             proxy_buffering on;
             proxy_buffer_size 4k;
             proxy_buffers 8 4k;
         }
 
-        # Root and other endpoints
+        # Root and others
         location / {
             proxy_pass http://crypto_app;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Timeouts
+
             proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
         }
 
-        # Block access to sensitive files
-        location ~ /\. {
+        # Block sensitive files
+        location ~ /\.) {
             deny all;
             access_log off;
             log_not_found off;
@@ -134,47 +151,4 @@ http {
             log_not_found off;
         }
     }
-
-    # HTTPS server block (uncomment after getting SSL certificate)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name your-domain.com; # Replace with your domain
-    #     
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/private.key;
-    #     
-    #     # SSL settings
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
-    #     ssl_prefer_server_ciphers off;
-    #     ssl_session_cache shared:SSL:10m;
-    #     ssl_session_timeout 10m;
-    #     
-    #     # Same locations as HTTP block
-    #     location /health {
-    #         proxy_pass http://crypto_app;
-    #         proxy_set_header Host $http_host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         access_log off;
-    #     }
-    #     
-    #     location /api/ {
-    #         limit_req zone=api burst=20 nodelay;
-    #         proxy_pass http://crypto_app;
-    #         proxy_set_header Host $http_host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #     }
-    #     
-    #     location / {
-    #         proxy_pass http://crypto_app;
-    #         proxy_set_header Host $http_host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #     }
-    # }
 }
