--- a/docker-compose-vps.yml
+++ b/docker-compose-vps.yml
@@ -71,8 +71,8 @@ services:
     depends_on:
       - crypto-app
     ports:
-      - "80:80"
-      - "443:443"
+      - "8080:80"   # host port 8080 -> container port 80
+      - "8443:443"  # host port 8443 -> container port 443
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
@@ -88,3 +88,4 @@ volumes:
 networks:
   crypto_network:
     driver: bridge
+
